--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1122,7 +1122,7 @@ hamburger menu
     .toggle {
         display: none;
     }
-    #hamburger .active a {
+    #hamburger .attuale a {
         color: $primary-color;
     }
 }
